2002-05-22  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_page_end): added a space, thanks rhult.

	* src/yelp-window.c (window_about_cb): 
	- fixed copyright notice in about dialog. Thanks menthos.

	* src/test-reader.c:
	(main): call yelp_reader_new with TRUE for async.
	(data_cb): swapped buffer and len arguments.

2002-05-21  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c:
	(reader_db_write): don't return -1
	(reader_db_close): same.

	* Release 0.8

	* NEWS: updated for 0.8

	* configure.in: bumped version to 0.8

	* src/yelp-reader.c: fixed compile warning.

	* src/yelp-uri.c: fixed so that external links are working too.

	* src/yelp-view-toc.c: implemented jimmac's mockups.

	* src/yelp-uri.c: added support for file:

	* src/Makefile.am (INCLUDES): added IMAGEDIR

	* data/images/*: new files

	* data/Makefile.am: new file

	* configure.in: 
	- added data/Makefile, data/images/Makefile to AC_OUTPUT.

	* Makefile.am (SUBDIRS): added data

2002-05-20  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-content.c: 
	- use YelpURI instead of docpath for current_uri. 
	(yelp_view_content_show_uri): 
	- Fixed a problem that if you viewed a man page and then switched
 	  to a docbook with TOC you didn't get the TOC.
	- Change cursor here.
	- Write out "Loading..." to the html-view instead of showing old
	  data while reading.
	(content_reader_data_cb): clear the "Loading..."-message first
	  time this is called.
	(content_reader_finished_cb): 
	- Fixes #82363
	- Give focus to html widget.

	* src/yelp-man.c (yelp_man_populate_tree_for_subdir): 
	- Set the link to be page.secnum instead of page.section.
	  For example pages with foo.3pm should have the link foo.3, this
	  solves the problem where you get the error that page is not
	  found. Might fix #82346.

2002-05-20  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:
	- render formal tables just like informal tables