@@ -59,7 +59,7 @@ struct _YelpReaderClass {
 };
 
 GType            yelp_reader_get_type     (void);
-YelpReader *     yelp_reader_new          (gboolean    async);
+YelpReader *     yelp_reader_new          (void);
 
 void             yelp_reader_start        (YelpReader *reader,
 					   YelpURI    *uri);
